--- a/css/media.css
+++ b/css/media.css
@@ -586,7 +586,6 @@ img {
   display: block;
   margin: 0 auto;
 }
-
 /* !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! */
 
 .img-list-one {
@@ -595,46 +594,150 @@ img {
   gap: 24px;
 }
 
-.sec-two {
-  padding-top: 120px;
-  padding-bottom: 120px;
+@media screen and (min-width: 428px) {
+  .sec-two {
+    padding-top: 96px;
+    padding-bottom: 96px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .sec-two {
+    padding-top: 96px;
+    padding-bottom: 96px;
+  }
+}
+@media screen and (min-width: 1158px) {
+  .sec-two {
+    padding-top: 120px;
+    padding-bottom: 120px;
+  }
 }
 
-.sec-two-list {
-  display: flex;
-  align-items: center;
-  gap: 24px;
+@media screen and (min-width: 428px) {
+  .sec-two-list {
+    display: block;
+    align-items: center;
+    gap: 24px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .sec-two-list {
+    display: flex;
+    align-items: center;
+    gap: 24px;
+  }
+}
+@media screen and (min-width: 1158px) {
+  .sec-two-list {
+    display: flex;
+    align-items: center;
+    gap: 24px;
+  }
 }
 
 .section-two-title {
   margin-bottom: 8px;
 }
 
-.section-two-item {
-  max-width: 264px;
+@media screen and (min-width: 428px) {
+  .section-two-item {
+    max-width: 396px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .section-two-item {
+    min-width: 356px;
+  }
+}
+@media screen and (min-width: 1158px) {
+  .section-two-item {
+    max-width: 264px;
+  }
 }
 
-.section-three {
-  padding-bottom: 120px;
+/* 111111111111111111111111111111111111111111111 */
+@media screen and (min-width: 428px) {
+  .section-three {
+    display: none;
+  }
+}
+@media screen and (min-width: 768px) {
+  .section-three {
+    display: none;
+  }
+}
+@media screen and (min-width: 1158px) {
+  .section-three {
+    padding-bottom: 120px;
+    display: block;
+  }
+
+  .section-three-title {
+    margin-bottom: 72px;
+  }
 }
 
-.section-three-title {
-  margin-bottom: 72px;
+@media screen and (min-width: 428px) {
+  .section-four {
+    padding-top: 96px;
+    padding-bottom: 96px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .section-four {
+    padding-top: 96px;
+    padding-bottom: 96px;
+  }
+}
+@media screen and (min-width: 1158px) {
+  .section-four {
+    padding-top: 120px;
+    padding-bottom: 120px;
+  }
 }
 
-.section-four {
-  padding-top: 120px;
-  padding-bottom: 120px;
+@media screen and (min-width: 428px) {
+  .section-four-title {
+    margin-bottom: 72px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .section-four-title {
+    margin-bottom: 72px;
+  }
+}
+@media screen and (min-width: 1158px) {
+  .section-four-title {
+    margin-bottom: 72px;
+  }
 }
 
-.section-four-title {
-  margin-bottom: 72px;
+@media screen and (min-width: 428px) {
+  .sec-four-over {
+    display: block;
+    text-align: center;
+    padding-top: 32px;
+    padding-bottom: 32px;
+    justify-content: center;
+    align-items: center;
+  }
 }
-
-.sec-four-over {
-  text-align: center;
-  padding-top: 32px;
-  padding-bottom: 32px;
+@media screen and (min-width: 768px) {
+  .sec-four-over {
+    text-align: center;
+    padding-top: 32px;
+    padding-bottom: 32px;
+    justify-content: center;
+    align-items: center;
+    margin: 0 auto;
+  }
+}
+@media screen and (min-width: 1158px) {
+  .sec-four-over {
+    text-align: center;
+    padding-top: 32px;
+    padding-bottom: 32px;
+  }
 }
 
 .team {
@@ -645,4 +748,370 @@ img {
 
 .section-four-photo {
   margin-bottom: 8px;
+}
+
+/* Page two type */
+
+.type-all,
+.type-website,
+.type-app,
+.type-design,
+.type-marketing {
+  padding: 12px 24px 12px 24px;
+  border: 1px solid #e7e9fc;
+  border-radius: 4twopx;
+}
+
+/* Boxing page 2*/
+
+.button-two {
+  display: flex;
+  justify-content: center;
+}
+
+.img-list-two {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 48px 24px;
+}
+
+.but-two-sec {
+  padding-top: 96px;
+}
+
+.el-page-two:hover {
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+}
+
+.two-section-one-list {
+  margin-bottom: 72px;
+  gap: 24px;
+}
+
+.img-list-two {
+  padding-bottom: 120px;
+}
+
+.page-two-over {
+  border: 1px solid #e7e9fc;
+  padding-top: 32px;
+  padding-bottom: 32px;
+  padding-left: 16px;
+}
+
+.two-text {
+  margin-top: 8px;
+}
+
+/* Icon */
+
+.list-icon-two {
+  display: flex;
+  justify-content: center;
+  gap: 24px;
+}
+
+.item-icon-two {
+  width: 40px;
+  height: 40px;
+}
+
+.link-icon-two {
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  background-color: #4d5ae5;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.link-icon-two:hover,
+.link-icon-two:focus {
+  background-color: #404bbf;
+}
+
+@media screen and (min-width: 428px) {
+  .link-icon-one {
+    display: none;
+  }
+}
+@media screen and (min-width: 768px) {
+  .list-icon-one {
+    display: none;
+  }
+}
+@media screen and (min-width: 1158px) {
+  .list-icon-one {
+    display: flex;
+    justify-content: center;
+    gap: 24px;
+  }
+
+  .item-icon-one {
+    width: 264px;
+    height: 112px;
+    margin-bottom: 8px;
+  }
+
+  .link-icon-one {
+    width: 100%;
+    height: 100%;
+    background-color: #f4f4fd;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+}
+
+@media screen and (min-width: 428px) {
+  .section-five {
+    padding-top: 96px;
+    padding-bottom: 96px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .section-five {
+    padding-top: 96px;
+    padding-bottom: 96px;
+  }
+}
+@media screen and (min-width: 1158px) {
+  .section-five {
+    padding-top: 120px;
+    padding-bottom: 120px;
+  }
+}
+
+.title-customers {
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.11;
+  text-align: center;
+  letter-spacing: 0.02em;
+  text-transform: capitalize;
+  color: #2e2f42;
+  margin-bottom: 72px;
+}
+
+@media screen and (min-width: 428px) {
+  .list-icon-three {
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    gap: 16px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .list-icon-three {
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    gap: 24px;
+  }
+}
+@media screen and (min-width: 1158px) {
+  .list-icon-three {
+    display: flex;
+    justify-content: center;
+    gap: 24px;
+  }
+}
+
+.item-icon-three {
+  width: 168px;
+  height: 88px;
+}
+
+@media screen and (min-width: 428px) {
+  .link-icon-three {
+    width: 168px;
+    height: 88px;
+    background-color: rgba(142, 143, 153, 1) rgba(142, 143, 153, 1);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    fill: #8e8f99;
+    border: 1px solid #8e8f99;
+    border-radius: 4px;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+      fill 250ms cubic-bezier(0.4, 0, 0.2, 1),
+      border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+}
+@media screen and (min-width: 768px) {
+  .link-icon-three {
+    width: 168px;
+    height: 88px;
+    background-color: rgba(142, 143, 153, 1) rgba(142, 143, 153, 1);
+    justify-content: center;
+    display: flex;
+    align-items: center;
+    fill: #8e8f99;
+    border: 1px solid #8e8f99;
+    border-radius: 4px;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+      fill 250ms cubic-bezier(0.4, 0, 0.2, 1),
+      border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+}
+@media screen and (min-width: 1158px) {
+  .link-icon-three {
+    width: 168px;
+    height: 88px;
+    background-color: rgba(142, 143, 153, 1) rgba(142, 143, 153, 1);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    fill: #8e8f99;
+    border: 1px solid #8e8f99;
+    border-radius: 4px;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+      fill 250ms cubic-bezier(0.4, 0, 0.2, 1),
+      border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+}
+
+@media screen and (min-width: 428px) {
+  .title-soc {
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #ffffff;
+    margin-bottom: 16px;
+  }
+
+  .list-icon-two-foot {
+    display: flex;
+    justify-content: center;
+    gap: 16px;
+  }
+
+  .item-icon-two-foot {
+    width: 40px;
+    height: 40px;
+  }
+
+  .link-icon-two-foot {
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+    background-color: #4d5ae5;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  .foot {
+    text-align: center;
+  }
+  .logo-down {
+    display: flex;
+    align-items: center;
+    text-align: center;
+    margin-left: 115px;
+  }
+  .logo-two-footer {
+    display: block;
+    align-items: center;
+  }
+  .footer-text {
+    max-height: 72px;
+  }
+  .footer-sec-two {
+  }
+}
+@media screen and (min-width: 768px) {
+}
+@media screen and (min-width: 1158px) {
+  .foot {
+    display: flex;
+  }
+
+  .title-soc {
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #ffffff;
+    margin-bottom: 16px;
+  }
+
+  .list-icon-two-foot {
+    display: flex;
+    justify-content: center;
+    gap: 16px;
+  }
+
+  .item-icon-two-foot {
+    width: 40px;
+    height: 40px;
+  }
+
+  .link-icon-two-foot {
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+    background-color: #4d5ae5;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+
+  .footer-sec-two {
+    margin-left: 120px;
+  }
+}
+
+.link-icon-two-foot:hover,
+.link-icon-two-foot:focus {
+  background-color: #31d0aa;
+}
+
+.link-icon-three:hover,
+.link-icon-three:focus {
+  fill: #404bbf;
+}
+
+.link-icon-three:hover,
+.link-icon-three:focus {
+  border: 1px solid #404bbf;
+  border-radius: 4px;
+}
+
+/* Position */
+
+.link-img {
+  display: block;
+}
+
+.team-list-img-wrapper {
+  position: relative;
+  overflow: hidden;
+}
+
+.overlay {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  transform: translate(0, 100%);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: rgba(244, 244, 253, 1);
+  background-color: rgba(77, 90, 229, 1);
+  padding: 40px 32px 164px 32px;
+}
+
+.link-img:hover .overlay,
+.link-img:focus .overlay {
+  transform: translate(0, 0);
 }
