--- a/css/styles.css
+++ b/css/styles.css
@@ -130,9 +130,7 @@ ol {
   line-height: 1.2;
   margin-right: auto;
   margin-left: auto;
-
   margin-bottom: 8px;
-
   color: var(--secondary-txt-cl);
 }
 @media screen and (min-width: 768px) {
@@ -141,6 +139,29 @@ ol {
     margin-bottom: 8px;
   }
 }
+
+@media screen and (min-width: 428px) {
+  .subtitle {
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 24px;
+    text-align: center;
+    letter-spacing: 0.02em;
+    color: #2e2f42;
+  }
+}
+
+@media screen and (max-width: 427px) {
+  .subtitle {
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 24px;
+    text-align: center;
+    letter-spacing: 0.02em;
+    color: #2e2f42;
+  }
+}
+
 .description {
   line-height: 1.5;
   margin-bottom: 8px;
@@ -711,7 +732,7 @@ ol {
   justify-content: center;
   width: 100%;
   height: 100%;
-  background-color: green;
+  background-color: var(--active-btn-bg-cl);
   border-radius: 50%;
   color: var(--icon-text-fill-cl);
 
@@ -1181,7 +1202,6 @@ ol {
   display: flex;
   align-items: center;
   justify-content: center;
-
   margin: 0;
   padding: 0;
   background-color: transparent;
@@ -1340,4 +1360,17 @@ ol {
   width: 24px;
   height: 24px;
   fill: currentColor;
+}
+
+.icon {
+  display: inline-block;
+  width: 1em;
+  height: 1em;
+  stroke-width: 0;
+  stroke: currentColor;
+  fill: currentColor;
+}
+
+.icon-vec-4 {
+  width: 1.4541015625em;
 }
